deploy/kubernetes/base/statefulset-minio.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cloudstorex-minio
  labels:
    app.kubernetes.io/name: cloudstorex
    app.kubernetes.io/component: minio
spec:
  serviceName: cloudstorex-minio
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudstorex
      app.kubernetes.io/component: minio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloudstorex
        app.kubernetes.io/component: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2024-01-16T16-07-38Z
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - "mkdir -p /data/cloudstorex-default && minio server /data --console-address :9001"
          ports:
            - name: api
              containerPort: 9000
            - name: console
              containerPort: 9001
          volumeMounts:
            - name: miniodata
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: miniodata
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 20Gi
