deploy/kubernetes/base/statefulset-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cloudstorex-redis
  labels:
    app.kubernetes.io/name: cloudstorex
    app.kubernetes.io/component: redis
spec:
  serviceName: cloudstorex-redis
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudstorex
      app.kubernetes.io/component: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloudstorex
        app.kubernetes.io/component: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          command: ["redis-server", "--appendonly", "yes"]
          ports:
            - name: redis
              containerPort: 6379
          volumeMounts:
            - name: redisdata
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redisdata
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
