deploy/kubernetes/base/service-minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudstorex-minio
  labels:
    app.kubernetes.io/name: cloudstorex
    app.kubernetes.io/component: minio
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloudstorex
    app.kubernetes.io/component: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
