deploy/kubernetes/base/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudstorex-redis
  labels:
    app.kubernetes.io/name: cloudstorex
    app.kubernetes.io/component: redis
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloudstorex
    app.kubernetes.io/component: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
